<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">mymusic</string>

    <!-- Helpers -->
    <string name="messageLoading">loading…\nplease wait</string>

    <!-- Login -->
    <string name="auth_failed">authentication failed</string>
    <string name="create_account">create account</string>
    <string name="desc_login_image">mymusic login image</string>
    <string name="emailpassword_status_fmt">email user %1$s (verified %2$b)</string>
    <string name="firebase_status_fmt">Firebase user %s</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_title_text">log in to mymusic</string>
    <string name="sign_in">sign in</string>
    <string name="sign_out">sign out</string>
    <string name="signed_out">signed out</string>
    <string name="verify_email">verify email</string>

    <!-- Release -->
    <string name="btn_add_cover">cover</string>
    <string name="btn_add_release" tools:ignore="ButtonCase">add</string>
    <string name="btn_delete_release">delete</string>
    <string name="btn_edit_release" tools:ignore="ButtonCase">update</string>
    <string name="btn_tracks">tracks</string>
    <string name="cb_digital">digital copy</string>
    <string name="cb_physical">physical copy</string>
    <string name="hint_artist">ABBA</string>
    <string name="hint_discs">1</string>
    <string name="hint_title">Voyage</string>
    <string name="hint_tracks">0</string>
    <string name="hint_year">2021</string>
    <string name="menu_cancel_release" tools:ignore="ButtonCase">cancel</string>
    <string name="menu_release">add to mymusic</string>
    <string name="select_cover">select cover image</string>
    <string name="tv_artist">artist</string>
    <string name="tv_cover">cover</string>
    <string name="tv_discs">number of discs</string>
    <string name="tv_title">title</string>
    <string name="tv_tracks">number of tracks</string>
    <string name="tv_type">type</string>
    <string name="tv_year">year of release</string>
    <string name="error_release">Unable to save this release</string>

    <!-- ReleaseList -->
    <string name="menu_add_release">add</string>
    <string name="menu_list">all mymusic</string>
    <string name="menu_sample_data">sample data</string>
    <string name="no_releases_found">You don\'t have any music?\n\nWhy not add some now,\nor press the SD button\nfor sample data</string>

    <!-- Track -->
    <string name="btn_add_track">add</string>
    <string name="btn_delete_track">delete</string>
    <string name="btn_edit_track">update</string>
    <string name="hint_disc_number">1</string>
    <string name="hint_track_artist">ABBA</string>
    <string name="hint_track_number">1</string>
    <string name="hint_track_title">I Still Have Faith In You</string>
    <string name="menu_cancel_track" tools:ignore="ButtonCase">cancel</string>
    <string name="menu_track">track</string>
    <string name="tv_disc_number">disc</string>
    <string name="tv_track_artist">track artist</string>
    <string name="tv_track_number">track</string>
    <string name="tv_track_title">track title</string>

    <!-- TrackList -->
    <string name="disc_heading">disc</string>
    <string name="go_back">back</string>
    <string name="menu_add_track">add track</string>
    <string name="menu_track_list">tracks</string>
    <string name="no_tracks_found">No tracks listed yet for\n\n</string>
    <string name="track_heading">track</string>

    <!-- Welcome -->
    <string name="btn_sample_start">start with sample data</string>
    <string name="btn_start">view mymusic</string>
    <string name="welcome_line">welcome to</string>

    <!-- Navigation header -->
    <string name="nav_header_title">user name</string>
    <string name="nav_header_subtitle">user email</string>
    <string name="nav_header_description">Navigation header</string>

    <!-- Nav Drawer -->
    <string name="nav_drawer_account">account</string>
    <string name="nav_drawer_mymusic">mymusic</string>

</resources>