<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TrackFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme" />

        </com.google.android.material.appbar.AppBarLayout>
        -->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvDiscNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/tv_disc_number"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/etDiscNumber"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:autofillHints="hint"
                            android:ems="4"
                            android:hint="@string/hint_disc_number"
                            android:inputType="number"
                            android:maxEms="4"
                            android:minEms="4"
                            android:numeric="integer"
                            tools:ignore="Deprecated" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvTrackNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/tv_track_number"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/etTrackNumber"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:autofillHints="hint"
                            android:ems="4"
                            android:hint="@string/hint_track_number"
                            android:inputType="number"
                            android:maxEms="4"
                            android:minEms="4"
                            android:numeric="integer"
                            android:textAlignment="textEnd"
                            tools:ignore="Deprecated" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTrackTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/tv_track_title"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etTrackTitle"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:autofillHints="hint"
                        android:ems="10"
                        android:hint="@string/hint_track_title"
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/tvTrackArtist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/tv_track_artist"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etTrackArtist"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:autofillHints="hint"
                        android:ems="10"
                        android:hint="@string/hint_track_artist"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp">

                    <Button
                        android:id="@+id/btnAddTrack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/btn_add_track"
                        android:text="@string/btn_add_track"
                        app:icon="@drawable/baseline_check_circle_outline_24"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/btnDeleteTrack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/btn_delete_track"
                        android:enabled="false"
                        android:text="@string/btn_delete_track"
                        app:icon="@drawable/baseline_delete_24"
                        tools:ignore="ButtonStyle" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>